--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,37 @@ span.t1{
       -webkit-background-clip: text;
       color: transparent;
     }
-    div.t1{
+div.t1{
       padding-bottom:10px;
       font-weight:bold;
       font-size:25px;
       text-align:center;
       font-family:"Garamond", serif;
+}
+div.tsep{
+  border: 0;
+  line-height: 1em;
+  position: relative;
+  text-align: center;
+  height: 1.5em;
+  font-size: 14px;
+  margin: 30px 15px;
+}
+
+div.tsep::before {
+    content: "";
+    background: linear-gradient(to right, transparent, black, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+}
+
+div.tsep::after {
+    content: attr(data-content);
+    position: relative;
+    padding: 0 7px;
+    line-height: 1.5em;
+    color: black;
+}
