--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ span.t1{
       -webkit-background-clip: text;
       color: transparent;
     }
+/* */
 div.t1{
       padding-bottom:10px;
       font-weight:bold;
@@ -19,30 +20,21 @@ div.t1{
       text-align:center;
       font-family:"Garamond", serif;
 }
-div.tsep{
-  border: 0;
-  line-height: 10em;
-  position: relative;
-  text-align: center;
-  height: 1.5em;
-  font-size: 14px;
-  margin: 30px 15px;
+/* */
+hr.line {
+    padding: 0;
+    border: 1px solid;
+    color: #333;
+    text-align: center;
 }
+/* */
+.box {
+    background-color:teal;
+    width:100px;
+    height:30px;
+    position:absolute;
+    left: 40%;
+    bottom:90%;
+    padding-top:20px;
 
-div.tsep::before {
-    content: "";
-    background: linear-gradient(to right, transparent, black, transparent);
-    position: absolute;
-    left: 0;
-    top: 50%;
-    width: 100%;
-    height: 1px;
-}
-
-div.tsep::after {
-    content: attr(data-content);
-    position: relative;
-    padding: 0 7px;
-    line-height: 1.5em;
-    color: black;
 }
