--- a/styles.css
+++ b/styles.css
@@ -23,17 +23,17 @@ div.t1{
 /* */
 hr.line {
       padding: 0;
-      background-color: #5e94d6;
+      background-color:#5e94d6;
       text-align: center;
 }
 /* */
 .box {
-      background-color: #5e94d6;
+      background-color:#5e94d6;
       width:100px;
       height:45px;
       margin:auto;
       left: 40%;
       bottom:90%;
       padding-top:20px;
-
+      text-align:center;
 }
