--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,6 @@ div.t1{
 /* */
 hr.top{
       height:45px;
-      background-color: linear-gradient(to right, #51c8cd , #3575d0)
+      background-color: linear-gradient(to right, #51c8cd , #3575d0);
 }
 /* */
