--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,6 @@ div.t1{
 /* */
 hr.top{
       height:45px;
-      background: linear-gradient(to right, #51c8cd , #3575d0);
+      background: linear-gradient(to right, #C7B390 , #5DA8FE);
 }
 /* */
