--- a/styles.css
+++ b/styles.css
@@ -24,5 +24,6 @@ div.t1{
 hr.top{
       height:45px;
       background: linear-gradient(to right, #C7B390, #5DA8FE);
+      border-radius:5px;
 }
 /* */
