--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,2 @@
-span.t1{
-      padding-top:20px;
-      padding-bottom:10px;
-      font-weight:bold;
-      font-size:30px;
-      display: table;
-      margin: 0 auto;
-      font-family:"Garamond", serif;
-      background: linear-gradient(to left,
-                    #C7B390,
-                    #5DA8FE);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-/* */
-div.t1{
-      padding-bottom:10px;
-      font-weight:bold;
-      font-size:25px;
-      text-align:center;
-      font-family:"Garamond", serif;
-}
-/* */
-hr.top{
-      height:45px;
-      background: linear-gradient(to right, #C7B390, #5DA8FE);
-      border-radius:5px;
-}
-/* */
+/* css..actually not sure that im going to /use/ this file now..  */
+
